--- a/code_students/CMakeLists.txt
+++ b/code_students/CMakeLists.txt
@@ -59,6 +59,18 @@ add_subdirectory(apps)
 
 if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
   enable_testing()
-  find_package(GTest CONFIG REQUIRED)  # use googletest
+  find_package(GTest CONFIG)  # use googletest
+
+  if(NOT ${GTest_FOUND})
+    include(FetchContent)
+    FetchContent_Declare(
+      googletest
+      URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+    )
+    # For Windows: Prevent overriding the parent project's compiler/linker settings
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    FetchContent_MakeAvailable(googletest)
+  endif()
+
   add_subdirectory(tests)
 endif()
